# dfelf

./: .gitignore  CSVFileElf.py  CVSFileElf.py  DataFileElf.py  ImageFileElf.py  MANIFEST.in  PDFFileElf.py  README.md  dfelf.py  pyproject.toml  run_build.py  run_coverage.py  setup.py
datafileelf/: ImageFileElf.py
dfelf/: commons.py  cvsfileelf.py  datafileelf.py  imagefileelf.py  pdffileelf.py
dfelf/test/: test_cvsfileelf.py  test_imagefileelf.py  test_pdffileelf.py  utils.py
dfelf/test/result/: merge.csv  test_add_bom.csv
dfelf/test/result/exclude/: exclude_=.csv  exclude_gt.csv  exclude_lt.csv  exclude_lte.csv
dfelf/test/result/filter/: filter_=.csv
dfelf/test/result/pdf/extract_images/: test.cmyk.tiff  test.jp2  test.tiff
dfelf/test/sources/: PDFFileElf_default.cfg  df4.csv  df5.csv  df6.csv  ori_data.csv
dfelf/test/sources/fof/: 005156_adj.csv  005215_adj.csv  005957_adj.csv  006297_adj.csv  006880_adj.csv  008145_adj.csv  009213_adj.csv  010266_adj.csv
dfelf/test/sources/merge/: cf_161505.csv  fh_161505.csv
tests/: test_CSVFileElf.py  test_CVSFileElf.py  test_ImageFileElf.py  test_PDFFileElf.py
tests/result/: PDFFileElf.cfg  join.csv  split02_D2.csv  split_B4.csv
tests/result/exclude/: exclude_gte.csv  exclude_n_!=.csv  exclude_n_=.csv  exclude_n_lte.csv
tests/result/filter/: filter_n_lte.csv
tests/result/split/: split02_D1.csv  split_B2.csv  split_B3.csv
tests/sources/: PDFFileElf_default.cfg  add.csv  df1.csv  df2.csv  df3.csv  ori_data.csv  products_p3.csv
