[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfelf"
version = "0.3.0"
description = "Data File Elf"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Krix Tam", email = "krix.tam@qq.com" }]
dependencies = [
  "pymoment>=0.0.6",
  "ni-config>=0.0.15",
  "pandas>=2.2.2",
  "Pillow>=10.4.0",
  "qrcode>=7.4.2",
  "opencv-python>=4.10.0.84",
  "scikit-image>=0.23.2",
  "PyMuPDF>=1.27.2",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KrixTam/dfelf"
"Bug Tracker" = "https://github.com/KrixTam/dfelf/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dfelf*"]

[tool.setuptools.package-data]
"dfelf.res.Noto_Sans_SC" = ["NotoSansSC-Regular.otf", "OFL.txt"]
